Fix layout bug

--- a/template/public/kss.less
+++ b/template/public/kss.less
@@ -269,6 +269,7 @@ body {
 
   // Content column
   .kss-content {
+    overflow: hidden;
     margin-left: @sidebar-width + 30px;
     padding: 40px 0 10px;
   }
